Prevented report section headers from taking up too much space and breaking page layouts

--- a/silico/data/static/css/report.css
+++ b/silico/data/static/css/report.css
@@ -70,6 +70,10 @@ h3 {
 	/*margin-top: 10px;*/
 	width: 19cm;
 	page-break-after: avoid;
+	/* Prevent section header's from taking up more than one line (which will break layout otherwise). */
+	text-overflow: ellipsis;
+	overflow: hidden;
+    white-space: nowrap;
 }
 
 .section__body {
